# MusTeraElinRaceController

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
include/: ActorManager.h  AnimationController.h  Config.h  ConsoleLog.h  FaceGenMorphDetector.h  HeadPartExplorer.h  Hook.h  HookEvent.h  PCH.h  PapyrusScripts.h  PlayerChangeElinDetector.h  PlayerGenderDetector.h  RaceCompatibility.h  Store.h  Utility.hpp  nifUtil.h
src/: ActorManager.cpp  AnimationController.cpp  Config.cpp  ConsoleLog.cpp  FaceGenMorphDetector.cpp  HeadPartExplorer.cpp  Hook.cpp  HookEvent.cpp  INiAVObject.cpp  IRaceSexMenu.cpp  Main.cpp  PapyrusScripts.cpp  PlayerChangeElinDetector.cpp  PlayerGenderDetector.cpp  RaceCompatibility.cpp  Store.cpp  nifUtil.cpp
